--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -1,7 +1,7 @@
 <body>
-  <header style="position: absolute; top: 0; left: 0; width: 100%; background-color: grey;">
+  <header style="position: absolute; top: 0; left: 0; width: 100%; background-color: green;">
       <!-- Elements de l'en-tête -->
-      <h1 style="text-align: center;">Titre</h1>
+      <h1 style="text-align: center;">ECOTOPIA</h1>
   </header>
   <footer style="position: absolute; bottom: 0; left: 0; width: 100%; background-color: grey;">
       <!-- Elements de bas de page-->
