Modification de utilisateur.html pour créer la page de l'utilisateur

--- a/TFC/imports/UI/Utilisateurs.html
+++ b/TFC/imports/UI/Utilisateurs.html
@@ -1,6 +1,10 @@
 <body>
       <!-- Elements de l'en-tête -->
-
         <h1 style="text-align: right;">Utilisateur</h1>
+
+        <button class="info">Magasins favoris</button>
+        <button class="comp">Magasins ajoutés</button>
+        <button class="info">Produits favoris</button>
+        <button class="comp">Editer le profil</button>
 
 </body>
