Base de données produits fonctionnelle :)

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,4 +1,6 @@
 <template name="home">
     <!-- Il s'agit de notre introduction qui est à compléter  -->
-    <h2>TITRE est une plateforme reposant sur un système partcicipatif où les utilisateurs......... A COMPLETER</h2>    
+    <p>
+        ECOTOPIA est une plateforme reposant sur un système partcicipatif où les utilisateurs......... A COMPLETER
+    </p>
 </template>
