--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -7,7 +7,8 @@
 
     <button id="home">Home</button>
     <button id="utilisateur">Utilisateur</button>
-
+    <button id="addProduit">Ajouter Produit</button>
+    {{> loginButtons}}
     {{> Template.dynamic template=currentPage}}
 
     <footer style="position: absolute; bottom: 0; left: 0; width: 100%; background-color: grey;">
