Form to delete products from database added

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -7,7 +7,7 @@
 
     <button id="home">Home</button>
     <button id="utilisateur">Utilisateur</button>
-    <button id="addProduit">Ajouter Produit</button>
+    <button id="manageProduit">Gérer Produit</button>
     {{> loginButtons}}
     <br><br>
     {{> Template.dynamic template=currentPage}}
