--- a/TFC/imports/UI/manageProduit.html
+++ b/TFC/imports/UI/manageProduit.html
@@ -1,10 +1,18 @@
-<template name="addProduit">
+<template name="manageProduit">
+    <h3>Ajouter un produit</h3>
     <form id="newProduit">
         <input name="nom" type="text" placeholder="Nom du produit"/>
         <input name="description" type="textarea" placeholder="Description du produit"/>
-        <button id="submitProduit">Ajouter le produit !</button>
+        <button id="submitAdd">Ajouter le produit !</button>
     </form>
-
+    <br>
+    <h3>Supprimer un produit</h3>
+    <form id="deleteProduit">
+        <input name="ID" type="text" placeholder="ID du produit à supprimer"/>
+        <button id="submitDelete">Supprimer le produit</button>
+    </form>
+    <br>
+    <h3>Produits dans la database :</h3>
     {{#each afficherProduits}}
         {{> unProduit}}
     {{/each}}
