--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -8,9 +8,9 @@
     <button id="home">Home</button>
     <button id="utilisateur">Utilisateur</button>
     <button id="manageProduit">Gérer Produit</button>
-    {{> loginButtons}}
+    {{> loginButtons}} <!-- Ajoute le bouton de connexion utilisateur -->
     <br><br>
-    {{> Template.dynamic template=currentPage}}
+    {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
 
     <footer style="position: absolute; bottom: 0; left: 0; width: 100%; background-color: grey;">
         <!-- Elements de bas de page-->
