Début de création de la database utilisateurs

--- a/TFC/imports/UI/manageProduit.html
+++ b/TFC/imports/UI/manageProduit.html
@@ -13,7 +13,7 @@
     </form>
     <br>
     <h3>Produits dans la database :</h3>
-    {{#each afficherProduits}}
+    {{#each displayAllProduits}}
         {{> displayProduit}}
     {{/each}}
 </template>
