--- a/TFC/imports/UI/utilisateur.html
+++ b/TFC/imports/UI/utilisateur.html
@@ -1,7 +1,49 @@
-<template name="utilisateur">
+<template name="user">
     <h1 style="text-align: right;">Utilisateur</h1>
-    <button class="info">Magasins favoris</button>
-    <button class="comp">Magasins ajoutés</button>
-    <button class="info">Produits favoris</button>
-    <button class="comp">Editer le profil</button>
+    {{#if currentUser}}
+        <!-- Displayed when the user is logged in-->
+        <a href="#" class="logout" style="color: red; text-decoration: none;">Déconnexion</a>
+        <button class="info">Magasins favoris</button>
+        <button class="comp">Magasins ajoutés</button>
+        <button class="info">Produits favoris</button>
+        <button class="comp">Editer le profil</button>
+    {{else}}
+        <!-- Displayed when the user is NOT logged in-->
+        <a href="#" class="register" style="color: red; text-decoration: none;">Inscription</a>
+        <br>
+        <a href="#" class="login" style="color: red; text-decoration: none;">Connexion</a>
+    {{/if}}
+</template>
+
+
+
+<template name="register">
+    <h2>Inscription</h2>
+    <form id="register">
+        <label for="username">Nom d'utilisateur:</label>
+        <input type="text" name="username"/>
+        <br><br>
+        <label for="email">Email:</label>
+        <input type="email" name="email">
+        <br><br>
+        <label for="password">Mot de passe:</label>
+        <input type="password" name="password">
+        <br><br>
+        <button type="submit">S'inscrire</button>
+    </form>
+</template>
+
+
+
+<template name="login">
+    <h2>Connexion</h2>
+    <form id="login">
+        <label for="email">Email:</label>
+        <input type="email" name="email">
+        <br><br>
+        <label for="password">Mot de passe:</label>
+        <input type="password" name="password">
+        <br><br>
+        <button type="submit">Connexion</button>
+    </form>
 </template>
