--- a/TFC/imports/UI/userprofile.html
+++ b/TFC/imports/UI/userprofile.html
@@ -1,4 +1,4 @@
-<template name="user">
+<template name="userprofile">
     <h1 style="text-align: right;">Utilisateur</h1>
     {{#if currentUser}}
         <!-- Displayed when the user is logged in-->
