--- a/TFC/imports/UI/userprofile.html
+++ b/TFC/imports/UI/userprofile.html
@@ -12,7 +12,7 @@
         <button class="register" style="color: red;">Inscription</button>
         <button class="login" style="color: red;">Connexion</button>
     {{/if}}
-    {{> Template.dynamic template=currentUserStatus}} <!-- Affichage du template dynamique -->
+    {{> Template.dynamic template=currentUserPage}} <!-- Affichage du template dynamique -->
 </template>
 
 
@@ -64,7 +64,7 @@
 
 <template name="editProfile">
     <h2>Editer le profil</h2>
-    <form id="editProfile">
+    <form id="editProfile" style="width:fit-content;">
         <label for="firstName">Prénom:</label>
         <input type="text" name="firstName">
         <br><br>
@@ -74,6 +74,16 @@
         <label for="email">Email:</label>
         <input type="email" name="email" required>
         <br><br>
+        <button type="button" id="showAdvancedEdition">Options avancées</button>
+        <div id="advancedEdition" style="display: none;">
+            <hr>
+            <label for="oldPassword">Mot de passe actuel:</label>
+            <input type="password" name="oldPassword" id="oldPassword">
+            <br><br>
+            <label for="newPassword">Nouveau mot de passe:</label>
+            <input type="password" name="newPassword" id="newPassword">
+            <br><br>
+        </div>
         <button type="submit">Valider</button>
     </form>
 </template>
