--- a/TFC/imports/UI/userprofile.html
+++ b/TFC/imports/UI/userprofile.html
@@ -65,6 +65,9 @@
 <template name="editProfile">
     <h2>Editer le profil</h2>
     <form id="editProfile" style="width:fit-content;">
+        <label for="username">Nom d'utilisateur:</label>
+        <input type="text" name="username" id="username" required/>
+        <br><br>
         <label for="firstName">Prénom:</label>
         <input type="text" name="firstName">
         <br><br>
@@ -72,7 +75,7 @@
         <input type="text" name="lastName">
         <br><br>
         <label for="email">Email:</label>
-        <input type="email" name="email" required>
+        <input type="email" name="email" id="email" required>
         <br><br>
         <button type="button" id="showAdvancedEdition">Options avancées</button>
         <div id="advancedEdition" style="display: none;">
