pushing before saturday

--- a/TFC/imports/UI/userprofile.html
+++ b/TFC/imports/UI/userprofile.html
@@ -27,7 +27,7 @@
         <input type="email" name="email" required>
         <br><br>
         <label for="password">Mot de passe:</label>
-        <input type="password" name="password" required>
+        <input type="password" name="password" id="password" required>
         <br><br>
         <label for="confirmPassword">Confirmer le mot de passe:</label>
         <input type="password" name="confirmPassword" id="confirmPassword" required>
