--- a/TFC/imports/UI/userProfile.html
+++ b/TFC/imports/UI/userProfile.html
@@ -27,10 +27,10 @@
         <input type="email" name="email" required>
         <br><br>
         <label for="password">Mot de passe:</label>
-        <input type="password" name="password" id="password" required>
+        <input type="password" name="password" id="password" required autocomplete="new-password">
         <br><br>
         <label for="confirmPassword">Confirmer le mot de passe:</label>
-        <input type="password" name="confirmPassword" id="confirmPassword" required>
+        <input type="password" name="confirmPassword" id="confirmPassword" required autocomplete="new-password">
         <br><br>
         <button type="submit">Valider</button>
         {{#if formErrorMessage}}
@@ -48,7 +48,7 @@
         <input type="email" name="email" required>
         <br><br>
         <label for="password">Mot de passe:</label>
-        <input type="password" name="password" required>
+        <input type="password" name="password" required autocomplete="current-password">
         <br><br>
         <button type="submit">Valider</button>
     </form>
@@ -90,13 +90,13 @@
         <div id="advancedEdition" style="display: none;">
             <hr>
             <label for="oldPassword">Mot de passe actuel:</label>
-            <input type="password" name="oldPassword" id="oldPassword">
+            <input type="password" name="oldPassword" id="oldPassword" autocomplete="current-password">
             <br><br>
             <label for="newPassword">Nouveau mot de passe:</label>
-            <input type="password" name="newPassword" id="newPassword">
+            <input type="password" name="newPassword" id="newPassword" autocomplete="new-password">
             <br><br>
             <label for="confirmNewPassword">Confirmer le mot de passe:</label>
-            <input type="password" name="confirmNewPassword" id="confirmNewPassword">
+            <input type="password" name="confirmNewPassword" id="confirmNewPassword" autocomplete="new-password">
             <br><br>
         </div>
         <button type="submit">Valider</button>
