products counter and form validation added

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,6 +1,9 @@
 <template name="home">
     <!-- Il s'agit de notre introduction qui est à compléter  -->
     <p>
-        ECOTOPIA est une plateforme reposant sur un système partcicipatif où les utilisateurs peuvent acheter et porposer des produits dans le commerce à proximité de chez eux. .... A COMPLETER
+        ECOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. .... A COMPLETER
+    </p>
+    <p>
+        Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
     </p>
 </template>
