--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -11,7 +11,7 @@
         <input type="text" name="lastName" id="lastName">
         <br><br>
         <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required>
+        <input type="email" name="email" id="email" required disabled>
         <br><br>
         <button type="button" id="showAdvancedEdition">Options avancées</button>
         <div id="advancedEdition" style="display: none;">
