Modification Template home

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,7 +1,7 @@
 <template name="home">
     <!-- Il s'agit de notre introduction qui est à compléter  -->
     <p>
-        ECOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. .... A COMPLETER
+        ECOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone... A COMPLETER
     </p>
     <p>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
