Et ça fait bim bam boum

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -6,5 +6,12 @@
     <p>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
     </p>
-<h2><a href=page_du_magasin.html>accéder à la page d'un magasin (developpement)</a></h2>
+    <h3>Magasin en vogue            Produits en vogue                 Autour de moi</h3>
+    <br>
+    <br>
+    <br>
+<center>
+<button type="button" name="Ajouter un magasin">Ajouter un magasin</button>   <!-- Ces bouttons n'ont pour l'instant aucune utilité!!!  -->
+<button type="button" name="Ajouter un produit">Ajouter un produit</button>
+</center>
 </template>
