ca fait pschit et ca fait vroum

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -1,7 +1,7 @@
 <body>
     <header style="position: fixed; top: 0; left: 0; width: 100%; background-color: green;">
         <!-- Elements de l'en-tête -->
-        <h1 style="text-align: center;">ECOTOPIA</h1>
+        <h1 style="text-align: center;">EKOTOPIA</h1>
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" id="userProfile" style="height: 50px; position: absolute; top: 0; right: 0;"/>
     </header>
 
