--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,12 +1,12 @@
 <template name="home">
     <!-- Il s'agit de notre introduction qui est à compléter  -->
     <p>
-        ECOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone... A COMPLETER
+        EKOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone... A COMPLETER
     </p>
     <p>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
     </p>
-    <h3>Magasin en vogue            Produits en vogue                 Autour de moi</h3>
+    <P>Magasin en vogue </p>          <p> Produits en vogue </p>                <p>Autour de moi</p>
     <br>
     <br>
     <br>
