--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -1,7 +1,7 @@
 <template name="userProfile">
     <h1 style="text-align: right;">Utilisateur</h1>
     {{#if currentUser}}
-        <!-- Displayed when the user is logged in-->
+        <!-- Displayed only when the user is logged in-->
         <button class="logout" style="color: red">Déconnexion</button>
         <button class="info">Magasins favoris</button>
         <button class="comp">Magasins ajoutés</button>
