--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -9,6 +9,7 @@
     <button id="home">Home</button>
     <button id="manageProduit">Gérer Produit</button>
     <button id="productPage">Page produit</button>
+    <button id="shopPage">Page magasin</button>
     {{> loginButtons}} <!-- Ajoute le bouton de connexion utilisateur -->
     <br><br>
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
