--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -1,16 +1,9 @@
 <template name="productPage">
 
-  <button type="button" name="Retour aux résultats">Retour aux résultats</button>
-  <button type="button" name="Nom un produit">Nom du produit</button>
-  <button type="button" name="Partager sur les réseaux sociaux"> Partager sur les réseaux sociaux</button>
-  <button type="button" name="Lien vers la page du magasin / site">Lien vers la page du magasin / site</button>
-  <button type="button" name="Ajouter aux produits favoris">Ajouter aux produits favoris</button>
-
-
-
-
-
-
-
+  <button>Retour aux résultats</button>
+  <h3>Nom du produit</h3>
+  <button> Partager sur les réseaux sociaux</button>
+  <button>Lien vers la page du magasin / site</button>
+  <button id="addToFavoriteProducts">Ajouter aux produits favoris</button>
 
 </template>
