insertion image pour page produit

--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -6,4 +6,8 @@
   <button>Lien vers la page du magasin / site</button>
   <button id="addToFavoriteProducts">Ajouter aux produits favoris</button>
 
+<body>
+  <img src= "" alt = "photo du produit"
+</body>
+
 </template>
