Début de création db et pages favoris

--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -1,10 +1,7 @@
 <template name="productPage">
-
-  <button>Retour aux résultats</button>
-  <h3>Nom du produit</h3>
-  <button> Partager sur les réseaux sociaux</button>
-  <button>Lien vers la page du magasin / site</button>
-  <button id="addToFavoriteProducts">Ajouter aux produits favoris</button>
-
-
+    <button>Retour aux résultats</button>
+    <h3>Nom du produit</h3>
+    <button> Partager la page du produit sur les réseaux sociaux</button>
+    <button>Lien vers la page du magasin / site</button>
+    <button id="addToFavoriteProducts">Ajouter aux produits favoris</button>
 </template>
