--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -1,3 +1,7 @@
 <template name="shopPage">
-    <center> <h1>Page du magasin </h1> </center>
+    <button>Retour aux résultats</button>
+    <h3>Nom du magasin</h3>
+    <button>Partager la page du magasin sur les réseaux sociaux</button>
+    <button>Lien vers le site du magasin</button>
+    <button id="addToFavoriteShops">Ajouter aux magasins favoris</button>
 </template>
