--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -3,9 +3,8 @@
     {{#if currentUser}}
         <!-- Displayed only when the user is logged in-->
         <button class="logout" style="color: red">Déconnexion</button>
-        <button class="info">Magasins favoris</button>
+        <button class="favorite">Mes favoris</button>
         <button class="comp">Magasins ajoutés</button>
-        <button class="info">Produits favoris</button>
         <button class="editProfile">Editer le profil</button>
     {{else}}
         <!-- Displayed when the user is NOT logged in-->
