commit avant de tester quelques chose qui va peut-être tout casser

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -5,6 +5,12 @@
         <br>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
     </p>
+    
+    <form id="searchForm">
+        <input type="search"/>
+        <button type="submit" id="searchSubmit">Rechercher</button>
+    </form>
+
     <div style="display:inline-block; margin: 20px">
         <h4>Magasins en vogue</h4>
     </div>
