--- a/TFC/imports/UI/user/favorite.html
+++ b/TFC/imports/UI/user/favorite.html
@@ -2,7 +2,7 @@
     <div id="favoriteProducts">
         <h4>Produits favoris</h4>
         {{#each getFavorites}}
-            {{#each dsiplayFavorites produit}}
+            {{#each displayFavorites produit}}
                 {{> favoriteProduct}}
             {{/each}}
         {{/each}}
