rien de cassé :), refactoring du stockage des produits favoris en array

--- a/TFC/imports/UI/user/favorite.html
+++ b/TFC/imports/UI/user/favorite.html
@@ -1,10 +1,8 @@
 <template name="favorite">
     <div id="favoriteProducts">
         <h4>Produits favoris</h4>
-        {{#each getFavorites}}
-            {{#each displayFavorites produit}}
-                {{> favoriteProduct}}
-            {{/each}}
+        {{#each displayFavorites}}
+            {{> favoriteProduct}}
         {{/each}}
     </div>
     <div id="favoriteShops">
