bdd magasins créée, magasins favoris et page magasins fonctionnels

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -7,7 +7,8 @@
 
 
     <button id="home">Home</button>
-    <button id="manageProduit">Gérer Produit</button>
+    <button id="manageProduit">Gérer Produits</button>
+    <button id="manageShop">Gérer Magasins</button>
     <button id="shopPage">Page magasin</button>
     {{> loginButtons}} <!-- Ajoute le bouton de connexion utilisateur -->
     <br><br>
