--- a/TFC/imports/UI/manageShop.html
+++ b/TFC/imports/UI/manageShop.html
@@ -22,7 +22,7 @@
 <template name="displayShop">
     <div id="{{_id}}" class="shop">
         <p style="border: 2px solid black; width: fit-content;">
-            ID : {{_id}}<br>  Nom : {{nom}} <br> Description : {{description}}
+            ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
     </div>
