--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -6,7 +6,7 @@
 
 <template name="displayedProductPage">
     <button>Retour aux résultats</button>
-    <h3>{{nom}}</h3>
+    <h3>{{name}}</h3>
     <p>{{description}}</p>
     <button> Partager la page du produit sur les réseaux sociaux</button>
     <button>Lien vers la page du magasin / site</button>
