--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -7,7 +7,7 @@
 
 <template name="displayedShopPage">
     <button>Retour aux résultats</button>
-    <h3>{{nom}}</h3>
+    <h3>{{name}}</h3>
     <p>{{description}}</p>
     <button> Partager la page du magasin sur les réseaux sociaux</button>
     <button>Lien vers le site du magasin</button>
