--- a/TFC/imports/UI/user/favorite.html
+++ b/TFC/imports/UI/user/favorite.html
@@ -14,9 +14,9 @@
 </template>
 
 <template name="favoriteProduct">
-    <div id="{{_id}}" class="produit">
+    <div id="{{_id}}" class="product">
         <p style="border: 2px solid black; width: fit-content;">
-            ID : {{_id}}<br>  Nom : {{nom}} <br> Description : {{description}}
+            ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
     </div>
@@ -25,7 +25,7 @@
 <template name="favoriteShop">
     <div id="{{_id}}" class="shop">
         <p style="border: 2px solid black; width: fit-content;">
-            ID : {{_id}}<br>  Nom : {{nom}} <br> Description : {{description}}
+            ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
     </div>
