--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -19,7 +19,7 @@
 </template>
 
 <template name="displayProduct">
-    <div id="{{_id}}" class="product">
+    <div id="{{_id}}" class="productBanner">
         <p style="border: 2px solid black; width: fit-content;">
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
