--- a/TFC/imports/UI/user/favorite.html
+++ b/TFC/imports/UI/user/favorite.html
@@ -14,7 +14,7 @@
 </template>
 
 <template name="favoriteProduct">
-    <div id="{{_id}}" class="product">
+    <div id="{{_id}}" class="productBanner">
         <p style="border: 2px solid black; width: fit-content;">
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
@@ -23,7 +23,7 @@
 </template>
 
 <template name="favoriteShop">
-    <div id="{{_id}}" class="shop">
+    <div id="{{_id}}" class="shopBanner">
         <p style="border: 2px solid black; width: fit-content;">
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
