--- a/TFC/imports/UI/manageShop.html
+++ b/TFC/imports/UI/manageShop.html
@@ -20,7 +20,7 @@
 
 
 <template name="displayShop">
-    <div id="{{_id}}" class="shop">
+    <div id="{{_id}}" class="shopBanner">
         <p style="border: 2px solid black; width: fit-content;">
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
