renaming db, favorite heart image added

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -9,8 +9,7 @@
     <button id="home">Home</button>
     <button id="manageProduit">Gérer Produits</button>
     <button id="manageShop">Gérer Magasins</button>
-    <button id="shopPage">Page magasin</button>
-    {{> loginButtons}} <!-- Ajoute le bouton de connexion utilisateur -->
+    <!-- {{> loginButtons}}  Ajoute le bouton de connexion utilisateur -->
     <br><br>
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
 
