--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -3,9 +3,10 @@
     <p>
         EKOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone... A COMPLETER
         <br>
-        Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
+        Nous comptons actuellement {{productsCounter}} produits dans notre base de données.<br>
+        Nous comptons actuellement {{shopsCounter}} magasins dans notre base de données.
     </p>
-    
+
     <form id="searchForm">
         <input type="search"/>
         <button type="submit" id="searchSubmit">Rechercher</button>
