--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -20,7 +20,7 @@
 
 <template name="displayProduct">
     <div id="{{_id}}" class="productBanner">
-        <p style="border: 2px solid black; width: fit-content;">
+        <p style="border: 2px solid black; width: 1500px">
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
