--- a/TFC/imports/UI/manageShop.html
+++ b/TFC/imports/UI/manageShop.html
@@ -21,7 +21,7 @@
 
 <template name="displayShop">
     <div id="{{_id}}" class="shopBanner">
-        <p style="border: 2px solid black; width: fit-content;">
+        <p style="border: 2px solid black; width: 1500px">
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
